3rd try at cutoff mobile project text, prob z-index issue

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -36,7 +36,7 @@ h1 {
 /* Menu styles */
 .menu {
     position: relative;
-    z-index: 10;
+    // z-index: 10;
     h2 {
         text-align: end;
     }
