--- a/styles/style.css
+++ b/styles/style.css
@@ -626,7 +626,6 @@ h1 {
 /* Menu styles */
 .menu {
   position: relative;
-  z-index: 10;
 }
 .menu h2 {
   text-align: end;
@@ -723,11 +722,7 @@ footer .redBar2 {
 .projects h3 {
   margin: 20px 0 5px 0;
 }
-.projects .projectContainer h5 {
-  width: 70%;
-}
 .projects .projectContainer p {
-  width: 70%;
   margin: 0;
   padding-top: 2px;
 }
